--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,10 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: My first Presentation i guess.
+author: Zardyez on GitHub
+email: satazai2011@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hi there! This is my first presentation! dont now how you got here, but welcome!
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+github_username:  Zardyez # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
